added deleteUser and getUser endpoints, created a deleteEntry function